added pillow as a dependency and added readmes for other problems

--- a/WhatIf.yml
+++ b/WhatIf.yml
@@ -8,6 +8,7 @@ dependencies:
     - nb_conda_kernels
     - jupyter_contrib_nbextensions
     - numpy
+    - pillow
     - matplotlib
     - seaborn
     - pandas
